cd/LALR/y.output
Grammar

    0 $accept: r $end

    1 r: s

    2 s: n
    3  | ZERO a
    4  | ONE b

    5 a: n a
    6  | ZERO

    7 b: n b
    8  | ONE

    9 n: ZERO
   10  | ONE


Terminals, with rules where they appear

$end (0) 0
error (256)
ZERO (258) 3 6 9
ONE (259) 4 8 10


Nonterminals, with rules where they appear

$accept (5)
    on left: 0
r (6)
    on left: 1, on right: 0
s (7)
    on left: 2 3 4, on right: 1
a (8)
    on left: 5 6, on right: 3 5
b (9)
    on left: 7 8, on right: 4 7
n (10)
    on left: 9 10, on right: 2 5 7


state 0

    0 $accept: . r $end

    ZERO  shift, and go to state 1
    ONE   shift, and go to state 2

    r  go to state 3
    s  go to state 4
    n  go to state 5


state 1

    3 s: ZERO . a
    9 n: ZERO .

    ZERO  shift, and go to state 6
    ONE   shift, and go to state 7

    $default  reduce using rule 9 (n)

    a  go to state 8
    n  go to state 9


state 2

    4 s: ONE . b
   10 n: ONE .

    ZERO  shift, and go to state 10
    ONE   shift, and go to state 11

    $default  reduce using rule 10 (n)

    b  go to state 12
    n  go to state 13


state 3

    0 $accept: r . $end

    $end  shift, and go to state 14


state 4

    1 r: s .

    $default  reduce using rule 1 (r)


state 5

    2 s: n .

    $default  reduce using rule 2 (s)


state 6

    6 a: ZERO .
    9 n: ZERO .

    $end      reduce using rule 6 (a)
    $default  reduce using rule 9 (n)


state 7

   10 n: ONE .

    $default  reduce using rule 10 (n)


state 8

    3 s: ZERO a .

    $default  reduce using rule 3 (s)


state 9

    5 a: n . a

    ZERO  shift, and go to state 6
    ONE   shift, and go to state 7

    a  go to state 15
    n  go to state 9


state 10

    9 n: ZERO .

    $default  reduce using rule 9 (n)


state 11

    8 b: ONE .
   10 n: ONE .

    $end      reduce using rule 8 (b)
    $default  reduce using rule 10 (n)


state 12

    4 s: ONE b .

    $default  reduce using rule 4 (s)


state 13

    7 b: n . b

    ZERO  shift, and go to state 10
    ONE   shift, and go to state 11

    b  go to state 16
    n  go to state 13


state 14

    0 $accept: r $end .

    $default  accept


state 15

    5 a: n a .

    $default  reduce using rule 5 (a)


state 16

    7 b: n b .

    $default  reduce using rule 7 (b)
